# torchx

./: CMakeLists.txt  README.md  init.lua  toast.lua  torchx-scm-1.rockspec
lib/TH/: ext.c  ext.h
lib/TH/generic/: .#AliasMultinomial.c  AliasMultinomial.c
rocks/: torchx-scm-1.rockspec
test/: test.lua
